src/assets/styles/pages/_contact.scss
.contact__container {
  .contact__content {
    padding: 80px 0 120px 0;
    p {
      letter-spacing: 1px;
      a {
        color: $black;
        text-decoration: none;
        border-bottom: 1px solid $black;
      }
    }
    .contact__socials {
      margin-top: 40px;
      text-align: center;
      p {
        margin-bottom: 8px;
        letter-spacing: 1px;
        a {
          color: $black;
          text-decoration: none;
          border-bottom: 1px solid $black;
        }
      }
    }
  }
}

